--- a/index.html
+++ b/index.html
@@ -76,22 +76,6 @@
 	        <div style="font-weight: 500;top: 140px;right: 10px;font-size: 29px;">
 	           آینده‌های محتمل برای کووید-۱۹، بر اساس شبیه‌سازی‌هایی بازی‌ناک
 	        </div>
-	        <div style="font-weight: 100;top: 189px;right: 10px;font-size: 19px;line-height: 21px;">
-	            <b>
-	                🕐 ۳۰ دقیقه
-	                &nbsp;&middot;&nbsp;
-	            </b>
-	            توسط
-	            <a href="https://scholar.google.com/citations?user=_wHMGkUAAAAJ&amp;hl=en">مارسل سالاته</a>
-	            همه‌گیرشناس
-	            و
-	            <a href="https://pourdamghani.github.io/ncase-fa/">نیکی کیس</a>
-				طراحی و کد،
-				ترجمهٔ
-				<a href='https://scholar.google.com/citations?user=jsHuvKEAAAAJ&hl=en'>آرش پوردامغانی</a>
-				و
-				<a href='https://www.linkedin.com/in/mehdimstv/'>مهدی مصطفوی</a>
-			</div>
 	    </div>
 	</div>
 
@@ -99,7 +83,7 @@
 
 	<p>چیزی که در ادامه می‌بینید بخشی از یک شبیه‌سازی بازی طوره که یک برنامه‌نویس سال 99 برای توضیح آینده‌های احتمالی که برای کرونا ممکنه اتفاق بیفته و کارهایی که می‌تونیم براش انجام بدیم طراحی کرده.</p>
 
-	<p>من اینجا فقط قسمتی از بخش اول توضیحاتش رو آوردم تا نمودارها و محدودیت رشد رو توش ببینید. اگر دوست دارید شبیه‌سازی کامل رو ببینید می‌تونید به <a href='https://raziehkouch.github.io/covid-19/'>این لینک</a> سر بزنید. البته ترجمه‌اش جای بهتر شدن داره :)</p>
+	<p>من اینجا فقط قسمتی از بخش اول توضیحاتش رو آوردم تا نمودارها و محدودیت رشد رو توش ببینید. اگر دوست دارید شبیه‌سازی کامل رو ببینید می‌تونید به <a href='https://raziehkouch.github.io/Covid/'>این لینک</a> سر بزنید. البته ترجمه‌اش جای بهتر شدن داره :)</p>
 
 	<div class="section chapter">
 	    <div>
@@ -118,7 +102,7 @@
 
 	<p>تخمین زده می‌شه که <em>در ابتدای</em> شیوع کووید-۱۹، به طور <em>میانگین </em> هر چهار روز، ویروس از یک<icon i></icon> به یک<icon s></icon>منتقل می‌شده.<sup id="fnref2"><a href="#fn2" rel="footnote">2</a></sup> (حواس‌تون باشه، آمار خیلی متغیره)</p>
 
-	<p>اگه ما «هر ۴ روز دوبرابر شدن» رو برای جامعه‌‌ای که در ابتدا فقط ۰٫۰۰۱ جمعیتش مبتلا %<span class="nowrap"><icon i></icon></span> هستن در نظر بگیریم، چه اتفاقی رخ می‌ده؟ </p>
+	<p>اگه ما «هر ۴ روز دوبرابر شدن» رو برای جامعه‌‌ای که در ابتدا فقط ۰٫۰۰۱% جمعیتش مبتلا <span class="nowrap"><icon i></icon></span> هستن در نظر بگیریم، چه اتفاقی رخ می‌ده؟ </p>
 
 	<p><strong>روی &quot;شروع&quot; بزن تا بتونی بازی کنی. راستی می‌تونی بعدش تنظیمات رو عوض کنی و دوباره بازی کنی:</strong> (جزئیات فنی: <sup id="fnref3"><a href="#fn3" rel="footnote">3</a></sup>)</p>
 
@@ -126,13 +110,15 @@
 	        <iframe src="sim?stage=epi-1" width="800" height="540"></iframe>
 	</div>
 
-	<p>این <strong>نمودار رشد نمایی</strong> هست. آروم شروع می‌شه و یهو منفجر می‌شه.از «بی‌خیال، فقط یه سرماخوردگی ساده‌‌اس» تا «اوه! آره، سرماخوردگی گور دسته‌جمعی توی یه شهر بزرگ به وجود نمیاره!». </p>
+	<p>این <strong>نمودار رشد نمایی</strong> هست. آروم شروع می‌شه و یهو منفجر می‌شه.از «بی‌خیال، فقط یه سرماخوردگی ساده‌‌اس» تا «اوه! آره، سرماخوردگی که گور دسته‌جمعی توی یه شهر بزرگ به وجود نمیاره!». </p>
 
 	<p><img src="pics/exponential.png" alt=""></p>
 
 	<p>اما، این شبیه‌سازی اشتباست. رشد نمایی، خوشبختانه، تا ابد ادامه پیدا نمی‌کنه. چیزی که جلوی شیوع ویروس رو می‌گیره اینه که اگه بقیه قبلا ویروس رو گرفته باشن: </p>
 
 	<p><img src="pics/susceptibles.png" alt=""></p>
+	
+	<p>در واقع چون تعداد کل آدمهایی که ممکنه مبتلا به ویروس بشن محدوده و بی‌نهایت نیست، محدودیت در رشد اتفاق میفته و این رشد متوقف میشه.</p>
 
 	<p>هرچی <span class="nowrap"><icon i></icon>ها</span> بیشتر باشن، سریعتر <span class="nowrap"><icon s></icon>ها</span> به <span class="nowrap"><icon i></icon>ها،</span>تبدیل میشن. <strong> ولی هرچی <span class="nowrap"><icon s></icon>ها</span> کمتر باشن، <em>آهسته تر</em> <span class="nowrap"><icon s></icon>ها</span> به <span class="nowrap"><icon i></icon>ها</span> تبدیل میشن.</strong></p>
 
@@ -142,9 +128,9 @@
 	        <iframe src="sim?stage=epi-2" width="800" height="540"></iframe>
 	</div>
 
-	<p>این منحنی «S - شکل» <strong>منحنی رشد لجستیک</strong> هستش. کم‌کم شروع می‌شه، منفجر می‌شه، و دوباره سرعتش کم می‌شه.</p>
+	<p>این منحنی «S - شکل» <strong>منحنی رشد لجستیک</strong> هستش. اول رشد نمایی اتفاق میفته و از وقتی محدودیت آشکار میشه، به صورت هدفجو ادامه پیدا میکنه تا روی هدف نهایی که منطبق محدودیته متوقف میشه.</p>
 
-	<p>اما این شبیه‌سازی <em>همچنان</em> اشتباهه. ما این واقعیت رو در نظر نمی‌گیرم که افراد مبتلا<icon i></icon> نهایتا دیگه بیمار نخواهند بود. یا ۱)بهبود پیدا می‌کنن، ۲) با آسیب به ریه‌شون «بهبود» پیدا می‌کنن، یا ۳) می‌میرن.</p>
+	<p>اما این شبیه‌سازی <em>همچنان</em> اشتباهه. ما این واقعیت رو در نظر نمی‌گیرم که افراد مبتلا<icon i></icon> نهایتا دیگه بیمار نخواهند بود. یا ۱)بهبود پیدا می‌کنن، ۲) یا با آسیب به ریه‌شون «بهبود» پیدا می‌کنن، یا ۳) می‌میرن.</p>
 
 	<p>برای راحتی‌ کار، فرض کنید همهٔ افراد مبتلا<icon i></icon> به افراد بهبود یافته<icon r></icon> تبدیل می‌شن.(البته یادمون باشه در واقعیت متاسفانه تعدادی‌شون فوت کردن.) <span class="nowrap"><icon r></icon>ها</span>نمی‌‌تونن دوباره مبتلا بشن، و بیاید  <em>فعلا</em> وانمود کنیم در طول عمرشون از ابتلا به بیماری ایمن شدن.</p>
 
@@ -162,18 +148,19 @@
 
 	<p>بیاین بررسی کنیم.</p>
 
-	<p><b style='color:#ff4040'>نمودار قرمز</b> موارد <em>فعال</em> فعلی<span class="nowrap"><icon i></icon>،</span><br>
-	<b style='color:#999999'>نمودار خاکستری </b><em>تمامی</em> موارد (فعال<span class="nowrap"><icon i></icon></span> + بهبود یافته<span class="nowrap"><icon r></icon></span>)
-	 شروع فقط با ۰٫۰۰۱٪<span class="nowrap"><icon i></icon>:</span></p>
+	<p><b style='color:#ff4040'>نمودار قرمز</b> در هر زمان داره موارد <em>فعال</em> فعلی<span class="nowrap"><icon i></icon> رو نشون میده،</span><br>
+	<b style='color:#999999'>و نمودار طوسی پررنگ </b><em>مجموع</em> تمام مواردی که الان مبتلا هستن یا قبلا مبتلا بودن و الان بهبود یافتن (فعال<span class="nowrap"><icon i></icon></span> + بهبود یافته<span class="nowrap"><icon r></icon></span>) رو نشون میده.
+	
+	 موقع شروع فقط ۰٫۰۰۱٪ مبتلا <span class="nowrap"><icon i></icon>هستن:</span></p>
 
 	<div class="sim">
 	        <iframe src="sim?stage=epi-4" width="800" height="540"></iframe>
 	</div>
 
-	<p>و اینجاست که نمودار مشهورمون ظاهر می‌شه! این یک منحنی زنگوله‌ای نیست، حتی یک منحنی «لگاریتمی-نرمال» نیست. اصلا اسمی نداره. ولی شونصد هزار بار دیدینش و التماس می‌کنن که صاف‌اش کنیم.</p>
+	<p>و اینجاست که اون نمودار مشهور موج‌های کرونا ظاهر می‌شه! این یک منحنی زنگوله‌ای نیست، حتی یک منحنی «لگاریتمی-نرمال» نیست. اصلا اسمی نداره. ولی شونصد هزار بار دیدینش و التماس می‌کنن که صاف‌اش کنیم.</p>
 
 	<p>این <strong>مدل SIR</strong> هست،<sup id="fnref5"><a href="#fn5" rel="footnote">5</a></sup><br>
-	(مخفف <icon s></icon><strong>S</strong>usceptible <icon i></icon><strong>I</strong>nfectious <icon r></icon><strong>R</strong>ecovered)<br>
+	(مخفف <strong>S</strong>usceptible<icon s></icon> <strong>I</strong>nfectious<icon i></icon> <strong>R</strong>ecovered<icon r></icon>)<br>
 	این <em>دومین</em> اصل  مهمه در «مقدمه‌ای بر همه‌گیرشناسی»:</p>
 
 	<p><img src="pics/sir.png" alt=""></p>
